# astrophysics-lab

./: .gitattributes  .gitignore  HDF_DATA_INVENTORY.md  INTEGRATION_REPORT.md  PROGRAM_REPORT.md  _quarto.yml  astro.qmd  classify.py  classify_hybrid.py  create_mask.py  debug_fits.py  download_hdf_data.py  generate_filtered_binning.py  hdf_utils.py  pyproject.toml  quality_control.py  replot_binning.py  requirements.txt  resource_config.py  run_analysis.py  run_professional_classification.py  scientific.py  snippets.py  transform_mask.py  verify_mask_alignment.py
.github/workflows/: ci.yml
benchmark/: __init__.py  eazy_comparison.py  template_comparison.py
calibration/: __init__.py  zeropoint.py
cosmology/: __init__.py  mcmc_fitting.py  model_comparison.py  tolman_test.py
data/: combined_mask.fits  measurements.xlsx  star_mask.fits  star_mask_mosaic.fits
data/hdf_north/: star_mask_chip3.fits  star_mask_mosaic.fits
data/hdf_north/chips/: f300_1_v2.fits  f300_1c_v2.fits  f300_2_v2.fits  f300_2c_v2.fits  f300_3_v2.fits  f300_3c_v2.fits  f300_4_v2.fits  f300_4c_v2.fits  f450_1_v2.fits  f450_1c_v2.fits  f450_2_v2.fits  f450_2c_v2.fits  f450_3c_v2.fits  f450_4_v2.fits  f450_4c_v2.fits  f606_1_v2.fits  f606_1c_v2.fits  f606_2_v2.fits  f606_2c_v2.fits  f606_3_v2.fits  f606_3c_v2.fits  f606_4_v2.fits  f606_4c_v2.fits  f814_1_v2.fits  f814_1c_v2.fits  f814_2_v2.fits  f814_2c_v2.fits  f814_3_v2.fits  f814_3c_v2.fits  f814_4_v2.fits  f814_4c_v2.fits
data/hdf_north/mosaics/: f300_mosaic_v2.fits  f300c_mosaic_v2.fits  f450c_mosaic_v2.fits  f606_mosaic_v2.fits  f814_mosaic_v2.fits  f814c_mosaic_v2.fits
data/hdf_north/sky_background/: sky_b.fits  sky_i.fits  sky_u.fits  sky_v.fits
detection/: __init__.py  deep_detection.py  sep_detection.py
download/: __init__.py  download_eazy_templates.py  fetch_all_data.py  query_mast.py
fits/: b_full.fits
fits_backup/stsci_4096/: b.fits  i.fits  u.fits  v.fits  v_weight.fits
fits_official/: f450_3_v2.fits
morphology/: __init__.py  concentration.py  deep_learning_classifier.py  hybrid_classifier.py  ml_classifier.py  professional_classification.py  sersic_fitting.py  star_classifier.py  star_galaxy.py  zoobot_classify.py
output/chip3/: galaxy_catalog.csv  galaxy_catalog_full.csv
output/full/: galaxy_catalog.csv  galaxy_catalog_full.csv
preprocessing/: __init__.py  cosmic_ray_removal.py  morpheus_segmentation.py
spectra/: S0.fits  Sa.fits  sbt1.fits  sbt2.fits  sbt3.fits  sbt4.fits  sbt5.fits  sbt6.fits
spectra/Spectra/: Sa.fits  Sb.fits  elliptical.fits  sbt6.fits
spectra/קבצי פייתון/: astro_lab_ipython_notebook-new_Jan2024.ipynb  astro_lab_ipython_notebook.ipynb  astro_lab_ipython_notebook_new_Jan2025.ipynb
spectra/קבצי פייתון/.ipynb_checkpoints/: astro_lab_ipython_notebook-checkpoint.ipynb
spectra/קבצי פייתון/Spectra/: S0.fits  elliptical.fits  sbt1.fits  sbt2.fits  sbt3.fits  sbt4.fits  sbt5.fits
tests/: __init__.py  test_classify.py  test_ml_classifier.py  test_scientific.py
validation/: __init__.py  external_catalogs.py  external_crossmatch.py  load_hlf_catalog.py  metrics.py  muse_specz.py  plots.py  specz_validation.py  vizier_query.py  wcs_utils.py  zeropoint_calibration.py  zoobot_morphology.py
