[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astro-angular-size"
version = "0.1.0"
description = "Angular size test analysis for comparing cosmological models using Hubble Deep Field data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Tom" }
]
keywords = ["astronomy", "astrophysics", "cosmology", "hubble", "angular-size"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24,<2.0",
    "scipy>=1.11",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "astropy>=5.3",
]

[project.optional-dependencies]
# Photometry tools for source detection and aperture photometry
photometry = [
    "photutils>=1.8",
    "sep>=1.2",
]

# Morphology analysis tools
morphology = [
    "statmorph>=0.5",
    "petrofit>=0.4",
]

# Photometric redshift estimation
photoz = [
    "eazy>=1.0",
]

# Machine learning classification
ml = [
    "scikit-learn>=1.3",
    "joblib>=1.3",
]

# MCMC sampling and analysis
mcmc = [
    "emcee>=3.1",
    "corner>=2.2",
    "arviz>=0.15",
]

# Deep learning models (heavy dependencies)
deeplearning = [
    "zoobot>=1.0",
    "torch>=2.0",
]

# External catalog validation
validation = [
    "astroquery>=0.4",
]

# Development and testing tools
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

# Full installation (everything except deeplearning which has heavy deps)
full = [
    "photutils>=1.8",
    "sep>=1.2",
    "statmorph>=0.5",
    "petrofit>=0.4",
    "eazy>=1.0",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "emcee>=3.1",
    "corner>=2.2",
    "arviz>=0.15",
    "astroquery>=0.4",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

# All dependencies (complete installation including deeplearning)
all = [
    "photutils>=1.8",
    "sep>=1.2",
    "statmorph>=0.5",
    "petrofit>=0.4",
    "eazy>=1.0",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "emcee>=3.1",
    "corner>=2.2",
    "arviz>=0.15",
    "zoobot>=1.0",
    "torch>=2.0",
    "astroquery>=0.4",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
run-analysis = "run_analysis:main"

[tool.setuptools.packages.find]
where = ["."]

# Ruff configuration - modern Python linter and formatter
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear (common bugs)
    "UP",     # pyupgrade (modernize syntax)
    "C4",     # flake8-comprehensions
    "NPY",    # NumPy-specific rules
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (common in scientific code)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests
"__init__.py" = ["F401"]  # Allow unused imports in __init__

[tool.ruff.lint.isort]
known-first-party = ["classify", "scientific", "validation", "benchmark", "morphology", "cosmology", "download", "calibration"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "-ra",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# Mypy configuration for static type checking
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["numpy.typing.mypy_plugin"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# Coverage configuration
[tool.coverage.run]
source = ["."]
omit = ["tests/*", "debug_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
