[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astro-angular-size"
version = "0.2.0"
description = "Angular size test analysis for comparing cosmological models using Hubble Deep Field data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Tom" }
]
keywords = ["astronomy", "astrophysics", "cosmology", "hubble", "angular-size"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24,<2.0",
    "scipy>=1.11",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "astropy>=5.3",
    "photutils>=1.8",
    "sep>=1.2",
    "statmorph>=0.5",
    "Pillow>=9.0",
    "scikit-learn>=1.3",
    "tqdm>=4.65",
]

[project.optional-dependencies]
# Zoobot for deep learning morphology classification
zoobot = ["zoobot[pytorch]>=2.0"]

# Numba for JIT compilation (2-5x faster photo-z fitting)
fast = ["numba>=0.58"]

# Development and testing tools
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
run-analysis = "run_analysis:main"

[tool.setuptools.packages.find]
where = ["."]

# Ruff configuration - modern Python linter and formatter
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear (common bugs)
    "UP",     # pyupgrade (modernize syntax)
    "C4",     # flake8-comprehensions
    "NPY",    # NumPy-specific rules
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (common in scientific code)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests
"__init__.py" = ["F401"]  # Allow unused imports in __init__

[tool.ruff.lint.isort]
known-first-party = ["classify", "detection", "morphology", "scientific"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "-ra",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# Mypy configuration for static type checking
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["numpy.typing.mypy_plugin"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# Coverage configuration
[tool.coverage.run]
source = ["."]
omit = ["tests/*", "debug_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
